# crk

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  Makefile  input.txt  sample  sample.cc
include/crk/: crk.h  trie.h  util.h
src/: crk.cc  trie.cc  util.cc
